# clog

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SECURITY.md  constitution.md  setup.sh  spec.md
.claude/commands/: speckit.feedback.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
include/: clog.h
specs/001-clog-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-clog-library/checklists/: requirements.md
specs/001-clog-library/contracts/: clog-api.md
src/: clog_mac.c  clog_posix.c
tests/: test_clog.c
tools/: autorun.sh
